# arcadeai-build-toolkit

./: .gitignore  README.md  requirements.txt
custom_toolkit/: pyproject.toml
custom_toolkit/arcade_custom_toolkit/: run.py
custom_toolkit/arcade_custom_toolkit/tools/: arithmetic.py  hello.py
custom_toolkit/evals/: eval_hello.py
custom_toolkit/tests/: test_custom_toolkit.py
